--- a/client/styles/styles.scss
+++ b/client/styles/styles.scss
@@ -50,6 +50,7 @@ $info: colors.$infoColor;
 @import 'tabs';
 @import 'postcard';
 @import 'friendcard';
+@import 'friend_request_card';
 @import 'modals';
 
 @import 'login';
